--- a/ex006 - imagens/index.html
+++ b/ex006 - imagens/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ex06</title>
+    <title>ex006-GIMP</title>
 </head>
 <body>
-    
+    <h1>Usando o GIMP</h1>
+    <p>
+        Utilizando o GIMP pela primeira vez redimensionando as imagens.
+    </p>
 </body>
 </html>
