--- a/HTML/ex013 - Lista OL e UL/index.html
+++ b/HTML/ex013 - Lista OL e UL/index.html
@@ -26,5 +26,48 @@
         <li>Alface</li>
         <li>Tomate</li>
     </ul>
+    <h2>Minhas linguagens favoritas</h2>
+    <ol type="1">
+        <li>Antigas</li>
+        <ol type="a">
+            <li>Portugol</li>
+            <li>Python</li>
+            <li>C</li>
+        </ol>
+        <li>Novas</li>
+        <ol type="a" start="4">
+            <li>Java</li>
+            <li>JavaScript</li>
+        </ol>
+    </ol>
+    <h2>Meus Jogos favoritos</h2>
+    <ol>
+        <li>PlayStation</li>
+        <ul type="circle">
+            <li>PlayStation 1</li>
+            <ul type="disc">
+                <li>PacMan</li>
+                <li>Crash Bandicout</li>
+            </ul>
+            <li>PlayStation 2</li>
+            <li>PlayStation 4</li>
+        </ul>
+        <li>Xbox</li>
+        <ul type="circle">
+            <li>Xbox 360</li>
+            <ul type="disc">
+                <li>Halo Reach</li>
+            </ul>
+        </ul>
+    </ol>
+    <h2>Lista de Definição</h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd>Linguagem de marcação para a criação de um site.</dd>
+        <dt>CSS</dt>
+        <dd>Linguagem de marcação para a criação do design de um site.</dd>
+        <dt>JavaScript</dt>
+        <dd>Linguagem de programação para a criação de um site.</dd>
+    </dl>
 </body>
 </html>
