--- a/HTML/ex014 - Links e Ancoras/index.html
+++ b/HTML/ex014 - Links e Ancoras/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Usando Links externos</h1>
     <p>Você pode acessar o meu <a href="https://github.com/GustavoHK10/HTML-e-CSS" target="_blank" rel="external">repositório publico no GitHub</a></p>
+    <h2>Usando links intesrnos</h2>
+    <p>Essa é a primeira página do meu site, você pode acessar minha <a href="page002.html" rel="next">outra página</a> </p>
+    <p>Você também pode acessar a <a href="noticias/pag003.html" target="_top">página de noticias</a></p>
 </body>
 </html>
