--- a/HTML/ex014 - Links e Ancoras/index.html
+++ b/HTML/ex014 - Links e Ancoras/index.html
@@ -12,5 +12,11 @@
     <h2>Usando links intesrnos</h2>
     <p>Essa é a primeira página do meu site, você pode acessar minha <a href="page002.html" rel="next">outra página</a> </p>
     <p>Você também pode acessar a <a href="noticias/pag003.html" target="_top">página de noticias</a></p>
+    
+    <h1>Links para Download</h1>
+    <ul>
+        <li><a href="Links para download/10 - Ligações em toda parte.pdf" download="Ligações em toda parte.pdf" type="application/pdf">Baixar o PDF</a></li>
+        <li><a href="Links para download/10 - Ligações em toda parte.zip" download="Ligações em toda parte.zip" type="application/zip">PDF em ZIP</a></li>
+    </ul>
 </body>
 </html>
