--- a/Desafios/d004 - Emojis Favoritos/index.html
+++ b/Desafios/d004 - Emojis Favoritos/index.html
@@ -26,5 +26,23 @@
         <li>&#x1f436 Código U+1F436</li>
         <li>&#x1f981 Código U+1F981</li>
     </ul>
+    <h2>Esportes</h2>
+    <ul type="disc">
+        <li>&#x1f3D3 Código U+1F3D3</li>
+        <li>&#x1f6BD Código U+1F6BD</li>
+        <li>&#x1f94A Código U+1F94A</li>
+    </ul>
+    <h2>Comidas</h2>
+    <ul>
+        <li>&#x1f354 Código U+1F354</li>
+        <li>&#x1f37F Código U+1F37F</li>
+        <li>&#x1f36A Código U+1F36A</li>
+    </ul>
+    <h2>Objetos</h2>
+    <ul>
+        <li>&#x1f4BB Código U+1F4BB</li>
+        <li>&#x1f4F7 Código U+1F4F7</li>
+        <li>&#x1f4A1 Código U+1F4A1</li>
+    </ul>
 </body>
 </html>
