--- a/HTML/ex015 - Imagens dinamicas/index.html
+++ b/HTML/ex015 - Imagens dinamicas/index.html
@@ -13,5 +13,14 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Foto Flexivel">
     </picture>
+
+    <h1>Reproduzindo audios</h1>
+    <p>Vamos aprender a reproduzir audios em HTML5</p>
+    <audio preload="metadata"autoplay controls loop>
+        <source src="Midia/For The Win - Everet Almond.mp3" type="audio/mpeg">
+        <source src="Midia/For The Win - Everet Almond.ogg" type="audio/ogg">
+        <source src="Midia/For The Win - Everet Almond.wav" type="audio/wav">
+        <p>Infelizmente seu navegador não consegue reproduzir áudio. <a href="Midia/For The Win - Everet Almond.mp3">Clique aqui para fazer o download.</a></p>
+    </audio>
 </body>
 </html>
