--- a/HTML/ex016 - Videos/index.html
+++ b/HTML/ex016 - Videos/index.html
@@ -6,8 +6,16 @@
     <title>Midias</title>
 </head>
 <body>
-    <h1>Inserindo Videos em Sites!</h1>
-    <p>Aqui está meu primeiro video:</p>
-    
+    <h1>Inserindo Videos hospedados localmente!</h1>
+    <p>Aqui está meu primeiro video, hospedado no meu propriio servidor:</p>
+    <video width="560" height="315" poster="Midias/limoes-capa.png" controls loop>
+        <source src="Midias/Meu-Video.mp4" type="video/mp4">
+        <source src="Midias/Meu-Video.mkv" type="video/mkv">
+        <source src="Midias/Meu-Video.webm" type="video/webm">
+        <p>Seu navegador não tem compatibilidade com reprodução de video</p>
+    </video>
+
+    <h1>Inserindo videos do Youtube:</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg?si=6zspv_i63hk2sHhN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
