--- a/Modulo2/Exercícios/ex002 - Fonts/fonte01.html
+++ b/Modulo2/Exercícios/ex002 - Fonts/fonte01.html
@@ -7,6 +7,25 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            /* 
+            Medidas absolutas
+            cm, mm, in, px, pt, pc
+            
+            Medidas Relativas
+            em, ex, rem, vw, vh, %
+            */
+        }
+        h1 {
+            /* 
+            Shorthand font
+            font-style -> font-weight -> font-size -> font-family
+            
+            font-style: italic;
+            font-weight: bolder;
+            font-size: 3em;
+            font-family: 'Work Sans', sans-serif;
+            */
+            font: italic bolder 3em 'Work Sans', sans-serif;
         }
     </style>
 </head>
