--- a/Modulo1/Desafios/d009 - Site com Videos/index.html
+++ b/Modulo1/Desafios/d009 - Site com Videos/index.html
@@ -11,6 +11,7 @@
         background-color: rgb(29, 27, 27);
         font-family: Arial, Helvetica, sans-serif;
         justify-content:center;
+        text-align: center;
         color: white;
     }
 </style>
