--- a/Modulo2/Exercícios/ex006 - caixas/caixa01.html
+++ b/Modulo2/Exercícios/ex006 - caixas/caixa01.html
@@ -6,12 +6,37 @@
     <title>Modelo de Caixas</title>
     <style>
         h1 {
+            
             background-color: lightgray;
+            height: 300px;
+            width: 300px;
+
             border-width: 10px;
             border-style: solid;
             border-color: darkgrey;
-            height: 300px;
-            width: 300px;
+            /*border: 10px solid darkgray;*/
+
+            padding-top: 20px;
+            padding-right: 10px;
+            padding-bottom: 30px;
+            padding-left: 10px;
+            /*padding: 20px 10px 40px 10px;*/
+
+            margin-top: 30px;
+            margin-right: 20px;
+            margin-bottom: 50px;
+            margin-left: 20px;
+            /*margin: 30px 20px 50px 20px;*/
+
+            outline-width: 5px;
+            outline-style: dashed;
+            outline-color: blueviolet;
+            /*outline: 5px dashed blueviolet*/
+        }
+        a {
+            border: 10px solid red;
+            padding: 10px;
+            margin: 20px 20px 20px 10px;
         }
     </style>
 </head>
