--- a/Modulo2/Exercícios/ex006 - caixas/caixa02.html
+++ b/Modulo2/Exercícios/ex006 - caixas/caixa02.html
@@ -32,6 +32,7 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px 20px 30px 40px;
         }
         article {
             background-color: lightgray;
