--- a/Modulo2/Desafios/d010 - android/index.html
+++ b/Modulo2/Desafios/d010 - android/index.html
@@ -20,8 +20,8 @@
     </header>
     <main>
         <section>
-            <h1>História do Mascote do Android</h1>
-            <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+            <h1 id="h1_principal">História do Mascote do Android</h1>
+            <p>Provavelmente você sabe que o sistema operacional <span class="change_green">Android</span>, mantido pelo <span class="change_green">Google</span> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
             <h2>A primeira versão</h2>
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
@@ -47,7 +47,7 @@
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
             <article id="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=05pkh3RZceCPMoLO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="760" height="500" src="https://www.youtube.com/embed/l2UDgpLz20M?si=05pkh3RZceCPMoLO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </article>
             <article id="extra">
                 <h3>Quer aprender mais?</h3>
