--- a/Modulo2/Desafios/d010 - android/index.html
+++ b/Modulo2/Desafios/d010 - android/index.html
@@ -37,7 +37,7 @@
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
-                <source media="(max-width: 750px)" srcset="guanabara/imagens/irina-blok-pq.jpg" type="image/jpg">
+                <source media="(max-width: 900px)" srcset="guanabara/imagens/irina-blok-pq.jpg" type="image/jpg">
                 <img src="guanabara/imagens/irina-blok.jpg" alt="imagem irina grande">
             </picture>
 
@@ -49,25 +49,29 @@
             <article id="video">
                 <iframe width="760" height="500" src="https://www.youtube.com/embed/l2UDgpLz20M?si=05pkh3RZceCPMoLO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </article>
+            <h3 id="cab_extra">Quer aprender mais?</h3>
             <article id="extra">
-                <h3>Quer aprender mais?</h3>
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
 
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <div>
+                        <li>1.5 - Cupcake</li>
+                        <li>1.6 - Donut</li>
+                        <li>3.0 - Eclair</li>
+                        <li>2.2 - Froyo</li>
+                        <li>2.3 - Gingerbread</li>
+                        <li>3.0 - Honeycomb</li>
+                        <li>4.0 - Ice Cream Sandwich</li>
+                    </div>
+                    <div>
+                        <li>4.1 - Jelly Bean</li>
+                        <li>4.4 - KitKat</li>
+                        <li>5.0 - Lolipop</li>
+                        <li>6.0 - Marshmallow</li>
+                        <li>7.0 - Nougat</li>
+                        <li>8.0 - Oreo</li>
+                        <li>9.0 - Pie</li>
+                    </div>
                 </ul>
 
                 <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
