--- a/Modulo2/Desafios/d010 - android/index.html
+++ b/Modulo2/Desafios/d010 - android/index.html
@@ -24,7 +24,7 @@
             <p>Provavelmente você sabe que o sistema operacional <span class="change_green">Android</span>, mantido pelo <span class="change_green">Google</span> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
             <h2>A primeira versão</h2>
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a class="change_green" href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a class="change_green" href="https://inkscape.org/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
             <picture>
                 <source media="(max-width: 750px)" srcset="guanabara/imagens/dan-droids-pq.png" type="image/png">
@@ -34,7 +34,7 @@
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
             
             <h2>Surge um novo mascote</h2>
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a class="change_green" href="https://www.irinablok.com/android" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
                 <source media="(max-width: 900px)" srcset="guanabara/imagens/irina-blok-pq.jpg" type="image/jpg">
@@ -50,34 +50,34 @@
                 <iframe width="760" height="500" src="https://www.youtube.com/embed/l2UDgpLz20M?si=05pkh3RZceCPMoLO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </article>
             <h3 id="cab_extra">Quer aprender mais?</h3>
-            <article id="extra">
+            <aside id="extra">
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
 
                 <ul>
                     <div>
-                        <li>1.5 - Cupcake</li>
-                        <li>1.6 - Donut</li>
-                        <li>3.0 - Eclair</li>
-                        <li>2.2 - Froyo</li>
-                        <li>2.3 - Gingerbread</li>
-                        <li>3.0 - Honeycomb</li>
-                        <li>4.0 - Ice Cream Sandwich</li>
+                        <li>1.5 - <abbr title="Bolo de Copo">Cupcake</abbr></li>
+                        <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
+                        <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
+                        <li>2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
+                        <li>2.3 - <abbr title="Biscoito de Gengibre">Gingerbread</abbr></li>
+                        <li>3.0 - <abbr title="Favo de Mel">Honeycomb</abbr></li>
+                        <li>4.0 - <abbr title="Sanduiche de Sorvete">Ice Cream Sandwich</abbr></li>
                     </div>
                     <div>
-                        <li>4.1 - Jelly Bean</li>
-                        <li>4.4 - KitKat</li>
-                        <li>5.0 - Lolipop</li>
-                        <li>6.0 - Marshmallow</li>
-                        <li>7.0 - Nougat</li>
-                        <li>8.0 - Oreo</li>
-                        <li>9.0 - Pie</li>
+                        <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
+                        <li>4.4 - <abbr title="Kit Kat">KitKat</abbr></li>
+                        <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
+                        <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
+                        <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
+                        <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
+                        <li>9.0 - <abbr title="Torta">Pie</abbr></li>
                     </div>
                 </ul>
 
                 <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
 
-                <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
-            </article>
+                <p>Acesse aqui o site <a class="change_green" href="https://www.android.com/intl/en_uk/what-is-android/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+            </aside>
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </section>
     </main>
